<resources>
    <string name="app_name">FirstApp</string>
    <string name="facebook">Facebook</string>
    <string name="rede_social">Rede Social</string>
    <string name="description">Facebook é uma rede social lançada em 4 de fevereiro de 2004, operado e de propriedade privada da Facebook Inc.. Em 4 de outubro de 2012, o Facebook atingiu a marca de 1 bilhão de usuários ativos, sendo por isso a maior rede social em todo o mundo</string>
    <string name="fundacao_key">Fundação</string>
    <string name="fundacao_value">fevereiro de 2004</string>
    <string name="ceo_key">CEO</string>
    <string name="ceo_value">Mark Zuckerberg</string>
    <string name="sede_key">Sede</string>
    <string name="sede_value">Menlo Park, Califórnia, EUA</string>
    <string name="fundadores_key">Fundadores</string>
    <string name="fundadores_value">Mark Zuckerberg, Dustin Moskovitz, Eduardo Saverin, Andrew McCollum, Chris Hughes</string>
    <string name="subsidiarias_key">Subsidiárias</string>
    <string name="subsidiarias_value">Instagram, WhatsApp, Oculus VR</string>
</resources>
